# q

./: COMPONENT_DATABASE.md  Dockerfile  Dockerfile.web  KICAD_INTEGRATION.md  LICENSE  LICENSE.md  Makefile  README.md  api_server.py  component_database.py  component_db  design_agent_architecture.md  design_simulator.py  docker-compose.yml  kicad_helpers.py  langgraph.json  manufacturing_output.py  mdgen.py  nginx.conf  pcb_design_agent.py  pcb_design_system.py  pcb_layout_engine.py  pyproject.toml  requirements.txt  run_kicad_parser.py  schematic_generator.py  setup.sh  start.sh  validate.sh
boilerplate/: README.md
boilerplate/src/agent/: graph.py  state.py
boilerplate/tests/integration_tests/: test_graph.py
src/agent/: __init__.py  advanced_manufacturing.py  advanced_routing.py  advanced_simulation.py  advanced_validation.py  component_db.py  configuration.py  enhanced_component_db.py  graph.py  kicad_integration.py  kicad_library_parser.py  state.py
tests/: simple_kicad_test.py  simple_test.py  test_functionality.py  test_kicad_integration.py
tests/integration_tests/: __init__.py  test_graph.py  test_integration_simplified.py
tests/test_output/: design.csv  design.drl  design.gbl  design.gbo  design.gm1  design.gtl  design.gto  design.kicad_pcb  design.kicad_sch  pcb_design.kicad_pro  sym-lib-table
tests/unit_tests/: __init__.py  test_advanced_routing_comprehensive.py  test_advanced_simulation_comprehensive.py  test_advanced_validation_comprehensive.py  test_agent_component_db_comprehensive.py  test_agent_enhanced_component_db_comprehensive.py  test_agent_graph_comprehensive.py  test_agent_kicad_integration_comprehensive.py  test_agent_kicad_library_parser_comprehensive.py  test_configuration.py  test_configuration_comprehensive.py  test_graph.py  test_graph_simplified.py  test_init.py  test_performance.py  test_state.py
utils/: __init__.py  character_utils.py  text_processing.py  version.py
web/: .babelrc.js  README.md  jest.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.mjs
web/.github/: copilot-instructions.md
web/src/: test-utils.tsx
web/src/__tests__/: api.test.tsx  configuration.test.tsx  dashboard.test.tsx  design.test.tsx  monitoring.test.tsx  setupTests.ts  test-utils.test.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/: page.tsx
web/src/app/configuration/: page.tsx
web/src/app/design/: page.tsx
web/src/app/monitoring/: page.tsx
web/src/components/: ApiStatus.tsx  DesignControl.tsx
web/src/hooks/: useApi.ts
web/src/types/: index.ts
web/src/utils/: api.ts
