# Copyright © 2025 Adventures of the Persistently Impaired (and Other Tales) Limited. All Rights Reserved.
[project]
name = "othertales_q"
version = "0.0.1"
description = "PCB design agent system using LangGraph."
authors = [
    { name = "David James", email = "david@othertales.co" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.6.10",
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-community>=0.3.31",
    "transformers>=4.57.1",
    "torch>=2.8.0",
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "sentencepiece>=0.2.1",
    "protobuf>=6.32.1",
    "aiohttp>=3.13.0",
    "pypdf>=6.1.1",
    "requests>=2.32.5",
    "gitpython>=3.1.45",
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.othertales_q", "othertales_q"]
[tool.setuptools.package-dir]
"langgraph.templates.othertales_q" = "src/agent"
"othertales_q" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"